# brazilian_ecommerce

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: c0.1-alb-data_description.ipynb  c0.5-alb-experiments.ipynb  c1.0-alb-brazillian_ecommerce.ipynb
