[tool.poetry]
name = "brazilian-ecommerce"
version = "0.1.0"
description = ""
authors = ["Andrey Lolo Brigida"]
readme = "README.md"
packages = [{include = "brazilian_ecommerce"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
plotly = "^5.17.0"
geopandas = "^0.14.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
